components/nrf-nfc/vendor/nfc_t4t_bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const NFC_T4T_MAX_PAYLOAD_SIZE: u32 = 65520;
#[doc = "< Emulated NDEF AID and EF-Files."]
pub const nfc_t4t_emu_mode_t_NFC_T4T_EMUMODE_NDEF: nfc_t4t_emu_mode_t = 0;
#[doc = "< Run just ISO-DEP, deliver I-Frames up."]
pub const nfc_t4t_emu_mode_t_NFC_T4T_EMUMODE_PICC: nfc_t4t_emu_mode_t = 1;
pub type nfc_t4t_emu_mode_t = cty::c_uint;
pub const nfc_t4t_event_t_NFC_T4T_EVENT_NONE: nfc_t4t_event_t = 0;
pub const nfc_t4t_event_t_NFC_T4T_EVENT_FIELD_ON: nfc_t4t_event_t = 1;
pub const nfc_t4t_event_t_NFC_T4T_EVENT_FIELD_OFF: nfc_t4t_event_t = 2;
pub const nfc_t4t_event_t_NFC_T4T_EVENT_NDEF_READ: nfc_t4t_event_t = 3;
pub const nfc_t4t_event_t_NFC_T4T_EVENT_NDEF_UPDATED: nfc_t4t_event_t = 4;
pub const nfc_t4t_event_t_NFC_T4T_EVENT_DATA_TRANSMITTED: nfc_t4t_event_t = 5;
pub const nfc_t4t_event_t_NFC_T4T_EVENT_DATA_IND: nfc_t4t_event_t = 6;
pub type nfc_t4t_event_t = cty::c_uint;
#[doc = "< Dummy value."]
pub const nfc_t4t_data_ind_flags_t_NFC_T4T_DI_FLAG_NONE: nfc_t4t_data_ind_flags_t = 0;
pub const nfc_t4t_data_ind_flags_t_NFC_T4T_DI_FLAG_MORE: nfc_t4t_data_ind_flags_t = 1;
pub type nfc_t4t_data_ind_flags_t = cty::c_uint;
#[doc = "< Value specified by the EMV specification."]
pub const nfc_t4t_fwi_max_val_t_NFC_T4T_FWI_MAX_VAL_EMV: nfc_t4t_fwi_max_val_t = 7;
#[doc = "< Value specified by the NFC specification."]
pub const nfc_t4t_fwi_max_val_t_NFC_T4T_FWI_MAX_VAL_NFC: nfc_t4t_fwi_max_val_t = 8;
pub type nfc_t4t_fwi_max_val_t = cty::c_uint;
pub const nfc_t4t_param_id_t_NFC_T4T_PARAM_FWI: nfc_t4t_param_id_t = 0;
pub const nfc_t4t_param_id_t_NFC_T4T_PARAM_FDT_MIN: nfc_t4t_param_id_t = 1;
pub const nfc_t4t_param_id_t_NFC_T4T_PARAM_SELRES: nfc_t4t_param_id_t = 2;
pub const nfc_t4t_param_id_t_NFC_T4T_PARAM_NFCID1: nfc_t4t_param_id_t = 3;
pub const nfc_t4t_param_id_t_NFC_T4T_PARAM_FWI_MAX: nfc_t4t_param_id_t = 4;
pub type nfc_t4t_param_id_t = cty::c_uint;
#[doc = " @brief Callback to pass events from NFCLib to application.\n\n @param context Application context for callback execution.\n @param event The event that occurred. see nfc_t4t_event.\n @param data Data to send to the application (event specific).\n @param data_length Length of the data. In case of @ref\n NFC_T4T_EVENT_NDEF_UPDATED, this parameter contains the value of the 'NLEN'\n field of the NDEF File; if the value is non-zero, it corresponds to the new\n size of the NDEF Message in the updated NDEF File.\n @param flags Some events deliver flags. see nfc_t4t_event for details."]
pub type nfc_t4t_callback_t = ::core::option::Option<
    unsafe extern "C" fn(
        context: *mut cty::c_void,
        event: nfc_t4t_event_t,
        data: *const u8,
        data_length: usize,
        flags: u32,
    ),
>;
unsafe extern "C" {
    #[doc = " @brief Register the application callback for event signaling.\n\n The callback will be called by NFCLib to notify the application of relevant\n events. It will be called from the HAL_NFC callback context. The library\n support 3 different Modes of Emulation:\n  - Raw ISO-Dep exchanges. All PDUs are signaled through the callback.\n  - Read-Only T4T NDEF-Tag. A static buffer is served. Only Field-Status\n    callbacks.\n  - Read-Write T4T NDEF-Tag. A mutable buffer is used. Only Field-Status\n    callbacks.\n\n The default mode is Raw ISO-Dep mode. The two other NDEF T4T modes are\n activated through the corresponding @ref nfc_t4t_ndef_rwpayload_set/ @ref\n nfc_t4t_ndef_staticpayload_set functions. The mode is locked in with a call\n to @ref nfc_t4t_emulation_start.\n\n @param callback Function pointer to the callback.\n @param context Pointer to a memory area used by the callback for execution\n (optional).\n\n @retval 0 Success.\n @retval -NRF_EINVAL Invalid argument (e.g. wrong data length, NULL pointer))\n @retval -NRF_EOPNOTSUPP If emulation is in running state."]
    pub fn nfc_t4t_setup(callback: nfc_t4t_callback_t, context: *mut cty::c_void) -> cty::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Set emulation buffer and content for a NDEF Tag emulation that is\n  Read/Writable.\n\n The buffer needs to be kept accessible for the lifetime of the emulation.\n If an external Reader-Writer changes the NDEF content it is signaled through\n the app-callback. Buffer can be changed during the lifetime of the emulation,\n when NDEF READ or UPDATE procedure is pending, and it will be changed after\n this procedure has completed. To perform this procedure safely, make sure to\n disable NFC interrupts.\n\n @param emulation_buffer Buffer pointer\n @param buffer_length Length of buffer (maximum writable NDEF size)\n\n @retval 0 Success.\n @retval -NRF_EINVAL Invalid argument (for example, wrong data length, NULL pointer).\n @retval -NRF_EOPNOTSUPP If the new buffer has a different length than the first one.\n @retval -NRF_EFAULT If the provided buffer is the currently used buffer."]
    pub fn nfc_t4t_ndef_rwpayload_set(
        emulation_buffer: *mut u8,
        buffer_length: usize,
    ) -> cty::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Set emulation buffer and content for an NDEF Tag emulation that is\n  Read-Only.\n\n The buffer needs to be kept accessible for the lifetime of the emulation.\n Since no write access is done to the buffer, the content could reside in\n flash memory.\n\n @param emulation_buffer Const buffer pointer\n @param buffer_length Length of contained NDEF payload message\n\n @retval 0 Success.\n @retval -NRF_EINVAL Invalid argument (for example, wrong data length, NULL pointer).\n @retval -NRF_EOPNOTSUPP Emulation is in running stated."]
    pub fn nfc_t4t_ndef_staticpayload_set(
        emulation_buffer: *const u8,
        buffer_length: usize,
    ) -> cty::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Send a raw response PDU after getting a Request PDU callback.\n\n When the library works in raw ISO-DEP mode it will signal request PDUs\n through the callback. The application then has to answer with a response PDU.\n It will use this function to send back the response PDU. This function can\n not be used in T4T NDEF (RW / STATIC) emulation modes.\n\n The lower ISODEP layer will handle the defragmentation of a long response PDU\n into smalleR pieces that the PCD can understand.\n\n @param pdu Const PDU pointer.\n @param pdu_length Length of PDU.\n\n @retval 0 Success.\n @retval -NRF_EINVAL Invalid argument (for example, wrong data length, NULL pointer).\n @retval -NRF_EOPNOTSUPP Emulation is in running state."]
    pub fn nfc_t4t_response_pdu_send(pdu: *const u8, pdu_length: usize) -> cty::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Set an NFC parameter.\n\n Allows to set an NFC configuration parameter.\n\n @param id ID of the parameter to set.\n @param data Pointer to a buffer containing the data to set.\n @param data_length Size of the buffer containing the data to set.\n\n @retval 0 Success.\n @retval -NRF_EINVAL Invalid argument (for example, wrong data length, NULL pointer)."]
    pub fn nfc_t4t_parameter_set(
        id: nfc_t4t_param_id_t,
        data: *mut cty::c_void,
        data_length: usize,
    ) -> cty::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Query an NFC parameter value.\n\n The queried value will be placed into the passed data buffer.\n If the buffer is too small, max_data_length will contain the required\n buffer size. If the buffer is big enough, max_data_length will contain\n the actual size of the data.\n\n @param id ID of the parameter to query.\n @param data Pointer to a buffer receiving the queried data.\n @param max_data_length Size of the buffer, receives actual size of queried\n data.\n\n @retval 0 Success.\n @retval -NRF_EINVAL Invalid argument (for example, wrong data length, NULL pointer)."]
    pub fn nfc_t4t_parameter_get(
        id: nfc_t4t_param_id_t,
        data: *mut cty::c_void,
        max_data_length: *mut usize,
    ) -> cty::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Activate the NFC frontend.\n\n Only after calling this function, events will be posted to the application\n callback.\n\n @retval 0 Success.\n @retval -NRF_EOPNOTSUPP Already started."]
    pub fn nfc_t4t_emulation_start() -> cty::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Deactivate the NFC frontend.\n\n After calling this function, no more events will be posted to the application\n callback.\n\n @retval 0 Success.\n @retval -NRF_EOPNOTSUPP Emulation was already stopped."]
    pub fn nfc_t4t_emulation_stop() -> cty::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Release reference to application callback.\n\n After calling this function, the passed callback pointer is no longer\n considered valid.\n After calling this function, the passed ndef pointer is no longer\n considered valid.\n\n You need to restart with @ref nfc_t4t_setup to run a new Emulation.\n\n @retval 0 Success.\n @retval -NRF_EOPNOTSUPP The NFC T4T has been de-initialized already."]
    pub fn nfc_t4t_done() -> cty::c_int;
}
